# shelf

./: CMakeLists.txt  README.md
packaging/: PKGBUILD  shelf.desktop
qml/: DockView.qml
src/: dockwindow.cpp  dockwindow.h  main.cpp  parabolic.h  shelfconfig.cpp  shelfconfig.h
